--- a/e2 eficiencia MCMC.ipynb
+++ b/e2 eficiencia MCMC.ipynb
@@ -11,7 +11,9 @@
     "**05/06/2020 - E2 S9**\n",
     "\n",
     "\n",
-    "**Integrantes del grupo**:  "
+    "**Integrantes del grupo**: Camila Goméz;\n",
+    "                           Sebastián López;\n",
+    "                           Kurt Walsen"
    ]
   },
   {
@@ -27,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,9 +112,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 11162 entries, 0 to 11161\n",
+      "Data columns (total 17 columns):\n",
+      "age             11162 non-null int8\n",
+      "job             11162 non-null category\n",
+      "marital         11162 non-null category\n",
+      "education       11162 non-null category\n",
+      "default         11162 non-null bool\n",
+      "balance         11162 non-null int64\n",
+      "housing         11162 non-null bool\n",
+      "loan            11162 non-null bool\n",
+      "contact         11162 non-null category\n",
+      "month           11162 non-null category\n",
+      "campaign        11162 non-null int64\n",
+      "pdays           11162 non-null int64\n",
+      "previous        11162 non-null int64\n",
+      "poutcome        11162 non-null category\n",
+      "outcome         11162 non-null bool\n",
+      "day_of_week     11162 non-null category\n",
+      "log_duration    11162 non-null float64\n",
+      "dtypes: bool(4), category(7), float64(1), int64(4), int8(1)\n",
+      "memory usage: 568.7 KB\n"
+     ]
+    }
+   ],
    "source": [
     "with open('data/trans_bank_marketing_codes-dtype.pk', 'rb') as file:\n",
     "    \n",
@@ -133,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,8 +178,8 @@
     "\n",
     "# categorizar las columnas para ColumnTransformer\n",
     "\n",
-    "int_cols = X_train.select_dtypes('int').columns.tolist()\n",
-    "float_cols = X_train.select_dtypes('float').columns.tolist()\n",
+    "int_cols = X_train.select_dtypes('int64').columns.tolist()\n",
+    "float_cols = X_train.select_dtypes('float64').columns.tolist()\n",
     "bool_cols = X_train.select_dtypes('bool').columns.tolist()\n",
     "\n",
     "one_hot_cols = X_train.select_dtypes('category').columns.tolist() + \\\n",
@@ -217,23 +248,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-3270.7592662676516"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "class RegresionLogisticaMixin():\n",
     "    '''Clase Mixin para el calculo de la log verosimilitud de un modelo \n",
     "    de regresion logistica'''\n",
     "    \n",
     "    def sigmoide(self, x):\n",
-    "        # Implementación aca\n",
+    "        return 1/(1+np.exp(-x))\n",
     "        \n",
     "    # metodo protegido (por compatibilidad de version posterior)\n",
     "    def _log_verosimilitud(self, w, X, y):\n",
-    "        # Implementacion aca\n",
+    "        var = X@w\n",
+    "        sigs = []\n",
+    "        for i in range(len(var)):\n",
+    "            sigs.append(self.sigmoide(var[i]))\n",
+    "        sigs = np.array(sigs)\n",
+    "        return np.sum( y@np.log(sigs) + (1-y)@np.log(1-sigs) )\n",
     "\n",
     "w_inicial = np.load('modelos/w_inicial.npy')\n",
     "RegresionLogisticaMixin()._log_verosimilitud(w_inicial, X_mcmc, y_mcmc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "numpy.ndarray"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(w_inicial)"
    ]
   },
   {
@@ -282,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +394,7 @@
     "        '''\n",
     "        Prior Gaussiana con media mu_w y covarianza esferica sigma_w**2 I\n",
     "        '''\n",
-    "        return stats.multivariate_normal(mean=np.zeros(self.dim_parametros), cov=(\n",
+    "        return stats.multivariate_normal(mean=self.media_priori, cov=(\n",
     "            self.std_priori**2)*np.eye(self.dim_parametros))\n",
     "\n",
     "    def metropolis_hastings(self, X, y, semilla):\n",
@@ -402,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,9 +486,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy en conjunto de entrnamiento:  0.8329948632182534\n",
+      "Proporcion de muestras aceptadas MCMC: 0.61\n"
+     ]
+    }
+   ],
    "source": [
     "# Resultados\n",
     "ac_rlb = accuracy_score(rlb_v0.predict(X_mcmc), y_mcmc)\n",
@@ -445,10 +521,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "*** Profile printout saved to text file 'reportes/RegresionLogisticaBayesianaMHV0.txt'. \n"
+     ]
+    }
+   ],
+   "source": [
+    "%lprun -T reportes/RegresionLogisticaBayesianaMHV0.txt -f rlb_v0.metropolis_hastings rlb_v0.metropolis_hastings(X_mcmc, y_mcmc, semilla=6202)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%lprun?"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -464,21 +560,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
     "# construya RegresionLogisticaBayesianaMHV1 aqui\n",
-    "class RegresionLogisticaBayesianaMHV1(RegresionLogisticaBayesianaMHV0):"
+    "class RegresionLogisticaBayesianaMHV1(RegresionLogisticaBayesianaMHV0):\n",
+    "\n",
+    "    def metropolis_hastings(self, X, y, semilla):\n",
+    "        '''\n",
+    "        Muestrea el espacio de los parametros mediante Metropolis-Hastings\n",
+    "        '''\n",
+    "\n",
+    "        # asegura replicabilidad\n",
+    "        np.random.seed(semilla)\n",
+    "\n",
+    "        # obtiene distribucion a priori y candidatos\n",
+    "        distribucion_priori = self.get_priori()\n",
+    "        W_candidatos = self.get_metropolis_hastings_candidatos()\n",
+    "        U_aceptacion = self.get_metropolis_hastings_uniformes()\n",
+    "\n",
+    "        # contador de candidatos aceptados\n",
+    "        aceptados = 0\n",
+    "        \n",
+    "        log_ver_actual = self._log_verosimilitud(self.traza[0], X, y)\n",
+    "        for i, w_candidato in enumerate(W_candidatos):\n",
+    "\n",
+    "            # localiza distribucion candidatos en w_actual\n",
+    "            w_actual = self.traza[i]\n",
+    "            w_candidato += w_actual\n",
+    "\n",
+    "            # calcula prior\n",
+    "            delta_prior = distribucion_priori.logpdf(w_candidato) - \\\n",
+    "                distribucion_priori.logpdf(w_actual)\n",
+    "\n",
+    "            # calcula verosimilitud\n",
+    "            log_ver_candidato = self._log_verosimilitud(w_candidato, X, y)\n",
+    "            delta_verosimilitud = log_ver_candidato - \\\n",
+    "                log_ver_actual\n",
+    "\n",
+    "            # probabilidad de aceptacion\n",
+    "            p_aceptacion = math.exp(delta_verosimilitud + delta_prior)\n",
+    "\n",
+    "            if U_aceptacion[i] < p_aceptacion:\n",
+    "\n",
+    "                # actualiza valor actual y contador de aceptados\n",
+    "                w_actual = w_candidato\n",
+    "                log_ver_actual = log_ver_candidato\n",
+    "                aceptados += 1\n",
+    "\n",
+    "            self.traza[i+1] = w_actual\n",
+    "\n",
+    "        # almacena la proporcion de candidatos aceptados\n",
+    "        self.proporcion_aceptacion = aceptados / self.n_muestras"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@lru_cache?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Escriba su discusión aquí.** (Extensión máxima 400 caracteres)\n",
-    "\n",
-    "\n",
+    "**Escriba su discusión aquí.** (Extensión máxima 400 caracteres).\n",
+    "1. El decorador lru_cache requiere (según su documentación) que los objetos que se agreguen al cache sean *hashable*, es decir, que contengan un *hash* o identificador inmutable durante toda su vida.\n",
+    "2. De manera más simple, necesita que los objetos agregados al cache sean inmutables. Como en este problema, lo que pretendemos dejar en cache son los parámetros w, que son de tipo *numpy.ndaaray*, no podemos utilizar el cache para guardarlos.\n",
     "\n",
     "\n",
     "\n",
@@ -493,11 +645,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# reporte el tiempo de ejecucion aqui"
+    "rlb_v1 = RegresionLogisticaBayesianaMHV1(w_inicial,media_prior,std_inicial,std_poposal,n_samples)\n",
+    "rlb_v1.fit(X_mcmc, y_mcmc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy en conjunto de entrnamiento:  0.8329948632182534\n",
+      "Proporcion de muestras aceptadas MCMC: 0.61\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Resultados\n",
+    "ac_rlb = accuracy_score(rlb_v1.predict(X_mcmc), y_mcmc)\n",
+    "print('Accuracy en conjunto de entrnamiento: ', ac_rlb)\n",
+    "print('Proporcion de muestras aceptadas MCMC:', rlb_v1.proporcion_aceptacion)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "*** Profile printout saved to text file 'reportes/RegresionLogisticaBayesianaMHV1.txt'. \n"
+     ]
+    }
+   ],
+   "source": [
+    "# reporte el tiempo de ejecucion aqui\n",
+    "%lprun -T reportes/RegresionLogisticaBayesianaMHV1.txt -f rlb_v1.metropolis_hastings rlb_v1.metropolis_hastings(X_mcmc, y_mcmc, semilla=6202)"
    ]
   },
   {
@@ -786,7 +979,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.3"
   },
   "nbTranslate": {
    "displayLangs": [
