--- a/e2 eficiencia MCMC.ipynb
+++ b/e2 eficiencia MCMC.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,9 +110,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 11162 entries, 0 to 11161\n",
+      "Data columns (total 17 columns):\n",
+      "age             11162 non-null int8\n",
+      "job             11162 non-null category\n",
+      "marital         11162 non-null category\n",
+      "education       11162 non-null category\n",
+      "default         11162 non-null bool\n",
+      "balance         11162 non-null int64\n",
+      "housing         11162 non-null bool\n",
+      "loan            11162 non-null bool\n",
+      "contact         11162 non-null category\n",
+      "month           11162 non-null category\n",
+      "campaign        11162 non-null int64\n",
+      "pdays           11162 non-null int64\n",
+      "previous        11162 non-null int64\n",
+      "poutcome        11162 non-null category\n",
+      "outcome         11162 non-null bool\n",
+      "day_of_week     11162 non-null category\n",
+      "log_duration    11162 non-null float64\n",
+      "dtypes: bool(4), category(7), float64(1), int64(4), int8(1)\n",
+      "memory usage: 568.7 KB\n"
+     ]
+    }
+   ],
    "source": [
     "with open('data/trans_bank_marketing_codes-dtype.pk', 'rb') as file:\n",
     "    \n",
@@ -133,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,12 +176,12 @@
     "\n",
     "# categorizar las columnas para ColumnTransformer\n",
     "\n",
-    "int_cols = X_train.select_dtypes('int').columns.tolist()\n",
+    "int_cols = X_train.select_dtypes('int64').columns.tolist()\n",
     "float_cols = X_train.select_dtypes('float').columns.tolist()\n",
     "bool_cols = X_train.select_dtypes('bool').columns.tolist()\n",
     "\n",
     "one_hot_cols = X_train.select_dtypes('category').columns.tolist() + \\\n",
-    "    X_train.select_dtypes('int8').columns.tolist()\n",
+    "    X_train.select_dtypes('int8').columns.tolist() \n",
     "\n",
     "# inicializar ColumnTransformer\n",
     "col_trans = ColumnTransformer([\n",
@@ -217,20 +246,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-3270.7592662676516"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "class RegresionLogisticaMixin():\n",
     "    '''Clase Mixin para el calculo de la log verosimilitud de un modelo \n",
     "    de regresion logistica'''\n",
     "    \n",
     "    def sigmoide(self, x):\n",
-    "        # Implementación aca\n",
+    "        return 1/(1+np.exp(-x))\n",
     "        \n",
     "    # metodo protegido (por compatibilidad de version posterior)\n",
     "    def _log_verosimilitud(self, w, X, y):\n",
-    "        # Implementacion aca\n",
+    "        var = X@w\n",
+    "        sigs = self.sigmoide(var)\n",
+    "        return np.sum( y@np.log(sigs) + (1-y)@np.log(1-sigs) )\n",
     "\n",
     "w_inicial = np.load('modelos/w_inicial.npy')\n",
     "RegresionLogisticaMixin()._log_verosimilitud(w_inicial, X_mcmc, y_mcmc)"
@@ -501,6 +543,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cpu_count()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -531,12 +593,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "X_cython = X_mcmc.toarray().astype('float32')\n",
     "y_cython = y_mcmc.astype('int32')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(8371, 56)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(X_cython.shape)\n",
+    "X_cython[0,55]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2.71828183])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.exp([1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-3270.7592662676516"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class RegresionLogisticaMixin():\n",
+    "    '''Clase Mixin para el calculo de la log verosimilitud de un modelo \n",
+    "    de regresion logistica'''\n",
+    "    \n",
+    "    def sigmoide(self, x):\n",
+    "        return 1/(1+np.exp(-x))\n",
+    "        \n",
+    "    # metodo protegido (por compatibilidad de version posterior)\n",
+    "    def _log_verosimilitud(self, w, X, y):\n",
+    "        var = X@w\n",
+    "        sigs = self.sigmoide(var)\n",
+    "        return np.sum( y@np.log(sigs) + (1-y)@np.log(1-sigs) )\n",
+    "\n",
+    "w_inicial = np.load('modelos/w_inicial.npy')\n",
+    "RegresionLogisticaMixin()._log_verosimilitud(w_inicial, X_mcmc, y_mcmc)"
    ]
   },
   {
@@ -557,11 +701,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The cython extension is already loaded. To reload it, use:\n",
+      "  %reload_ext cython\n"
+     ]
+    }
+   ],
+   "source": [
+    "%load_ext cython"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%cython -a"
+    "%%cython \n",
+    "\n",
+    "from libc.math cimport exp,log\n",
+    "from itertools import product as prod\n",
+    "import cython\n",
+    "\n",
+    "cdef class LogVerosimilitud():\n",
+    "    cdef double X[8371][56]\n",
+    "    cdef double y[8371]\n",
+    "\n",
+    "    def __init__(self, X, y):\n",
+    "        self.X = self.transform(X)\n",
+    "        self.y = self.transform(y, False)\n",
+    "    \n",
+    "    cpdef transform(self,array, matrix=True):\n",
+    "        cdef int i,j\n",
+    "        cdef double X1[8371][56]\n",
+    "        cdef double y1[8371]\n",
+    "        if matrix:\n",
+    "            for i,j in prod(range(8371),range(56)):\n",
+    "                X1[i][j] = array[i][j]\n",
+    "            return X1\n",
+    "        else:\n",
+    "            for i in range(8371):\n",
+    "                y1[i] = array[i]\n",
+    "            return y1\n",
+    "    \n",
+    "    #@cython.cdivision\n",
+    "    cpdef sigmoide(self, array):\n",
+    "        cdef double sig_array[8371]\n",
+    "        cdef int i\n",
+    "        for i in range(8371):\n",
+    "                sig_array[i] = 1.0 / (<double>(1+ exp(-array[i]))) \n",
+    "        return sig_array\n",
+    "\n",
+    "    cpdef double get(self,w):\n",
+    "        cdef double w_c[56]\n",
+    "        cdef double var[8371]\n",
+    "        cdef int i,j\n",
+    "        for i in range(56):\n",
+    "            w_c[i] = w[i]\n",
+    "        for i in range(8371):\n",
+    "            var[i] = sum([((self.X)[i][j]) * w_c[i] for j in range(56)]) \n",
+    "        sigs = self.sigmoide(var)\n",
+    "        \n",
+    "        return sum([ ((self.y)[i])*log(sigs[i]) + (1 - ((self.y)[i]) )*log(1-sigs[i]) for i in range(8371)])\n",
+    "                \n",
+    "         \n",
+    "        \n"
    ]
   },
   {
@@ -569,6 +779,15 @@
    "metadata": {},
    "source": [
     "* Compruebe que su implementación retorna la verosimilitud ya conocida para `w_inicial`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "v = LogVerosimilitud(X_cython, y_cython)"
    ]
   },
   {
@@ -603,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -626,9 +845,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'col_trans' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-2-0ca42f091614>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mX_mcmc_test\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcol_trans\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit_transform\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_test\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mX_mcmc_test\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msparse\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhstack\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mones\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_mcmc_test\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mX_mcmc_test\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0my_mcmc_test\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0my_test\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mint\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'col_trans' is not defined"
+     ]
+    }
+   ],
    "source": [
     "X_mcmc_test = col_trans.fit_transform(X_test)\n",
     "X_mcmc_test = sparse.hstack((np.ones((X_mcmc_test.shape[0], 1)), X_mcmc_test))\n",
@@ -786,7 +1017,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.4"
   },
   "nbTranslate": {
    "displayLangs": [
