--- a/e2 eficiencia MCMC.ipynb
+++ b/e2 eficiencia MCMC.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
        "-3270.7592662676516"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -593,60 +593,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "X_cython = X_mcmc.toarray().astype('float32')\n",
     "y_cython = y_mcmc.astype('int32')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(8371, 56)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.0"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "print(X_cython.shape)\n",
-    "X_cython[0,55]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([2.71828183])"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.exp([1])"
    ]
   },
   {
@@ -701,25 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The cython extension is already loaded. To reload it, use:\n",
-      "  %reload_ext cython\n"
-     ]
-    }
-   ],
-   "source": [
-    "%load_ext cython"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -734,44 +668,34 @@
     "    cdef double y[8371]\n",
     "\n",
     "    def __init__(self, X, y):\n",
-    "        self.X = self.transform(X)\n",
-    "        self.y = self.transform(y, False)\n",
+    "        self.transform_matrix(X)\n",
+    "        self.transform_array(y)\n",
     "    \n",
-    "    cpdef transform(self,array, matrix=True):\n",
+    "    cpdef void transform_matrix(self,matrix):\n",
     "        cdef int i,j\n",
-    "        cdef double X1[8371][56]\n",
-    "        cdef double y1[8371]\n",
-    "        if matrix:\n",
-    "            for i,j in prod(range(8371),range(56)):\n",
-    "                X1[i][j] = array[i][j]\n",
-    "            return X1\n",
-    "        else:\n",
-    "            for i in range(8371):\n",
-    "                y1[i] = array[i]\n",
-    "            return y1\n",
-    "    \n",
-    "    #@cython.cdivision\n",
-    "    cpdef sigmoide(self, array):\n",
-    "        cdef double sig_array[8371]\n",
+    "        for i,j in prod(range(8371),range(56)):\n",
+    "                (self.X)[i][j] = matrix[i][j]\n",
+    "\n",
+    "    cpdef void transform_array(self,array):\n",
     "        cdef int i\n",
     "        for i in range(8371):\n",
-    "                sig_array[i] = 1.0 / (<double>(1+ exp(-array[i]))) \n",
-    "        return sig_array\n",
-    "\n",
+    "                (self.y)[i] = array[i]\n",
+    "                \n",
+    "    #@cython.cdivision\n",
     "    cpdef double get(self,w):\n",
     "        cdef double w_c[56]\n",
     "        cdef double var[8371]\n",
+    "        cdef double sigs[8371]\n",
     "        cdef int i,j\n",
+    "        \n",
     "        for i in range(56):\n",
     "            w_c[i] = w[i]\n",
+    "            \n",
     "        for i in range(8371):\n",
-    "            var[i] = sum([((self.X)[i][j]) * w_c[i] for j in range(56)]) \n",
-    "        sigs = self.sigmoide(var)\n",
-    "        \n",
-    "        return sum([ ((self.y)[i])*log(sigs[i]) + (1 - ((self.y)[i]) )*log(1-sigs[i]) for i in range(8371)])\n",
+    "            var[i] = sum([ ((self.X)[i][j]) * w_c[i] for j in range(56)]) \n",
+    "            sigs[i] = 1 / (1+ exp(-var[i]))\n",
     "                \n",
-    "         \n",
-    "        \n"
+    "        return sum([ ((self.y)[i])*log(sigs[i]) + (1 - ((self.y)[i]) )*log(1-sigs[i]) for i in range(8371)])\n"
    ]
   },
   {
@@ -783,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -792,10 +716,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-35155.018885964615"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "v.get(w_inicial)"
+   ]
   },
   {
    "cell_type": "markdown",
