--- a/e2 eficiencia MCMC.ipynb
+++ b/e2 eficiencia MCMC.ipynb
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
        "-3270.7592662676516"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -602,40 +602,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-3270.7592662676516"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "class RegresionLogisticaMixin():\n",
-    "    '''Clase Mixin para el calculo de la log verosimilitud de un modelo \n",
-    "    de regresion logistica'''\n",
-    "    \n",
-    "    def sigmoide(self, x):\n",
-    "        return 1/(1+np.exp(-x))\n",
-    "        \n",
-    "    # metodo protegido (por compatibilidad de version posterior)\n",
-    "    def _log_verosimilitud(self, w, X, y):\n",
-    "        var = X@w\n",
-    "        sigs = self.sigmoide(var)\n",
-    "        return np.sum( y@np.log(sigs) + (1-y)@np.log(1-sigs) )\n",
-    "\n",
-    "w_inicial = np.load('modelos/w_inicial.npy')\n",
-    "RegresionLogisticaMixin()._log_verosimilitud(w_inicial, X_mcmc, y_mcmc)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -653,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -662,6 +628,7 @@
     "from libc.math cimport exp,log\n",
     "from itertools import product as prod\n",
     "import cython\n",
+    "import numpy as np\n",
     "\n",
     "cdef class LogVerosimilitud():\n",
     "    cdef double X[8371][56]\n",
@@ -681,21 +648,27 @@
     "        for i in range(8371):\n",
     "                (self.y)[i] = array[i]\n",
     "                \n",
-    "    #@cython.cdivision\n",
+    "    @cython.cdivision\n",
     "    cpdef double get(self,w):\n",
     "        cdef double w_c[56]\n",
     "        cdef double var[8371]\n",
     "        cdef double sigs[8371]\n",
+    "        cdef double answer = 0\n",
     "        cdef int i,j\n",
     "        \n",
     "        for i in range(56):\n",
     "            w_c[i] = w[i]\n",
     "            \n",
     "        for i in range(8371):\n",
-    "            var[i] = sum([ ((self.X)[i][j]) * w_c[i] for j in range(56)]) \n",
-    "            sigs[i] = 1 / (1+ exp(-var[i]))\n",
-    "                \n",
-    "        return sum([ ((self.y)[i])*log(sigs[i]) + (1 - ((self.y)[i]) )*log(1-sigs[i]) for i in range(8371)])\n"
+    "            var[i]=0\n",
+    "            for j in range(56):\n",
+    "                var[i] += ((self.X)[i][j]) * w_c[j]  \n",
+    "            sigs[i] = 1 / <double>(1+ exp(-var[i]))\n",
+    "        \n",
+    "        for i in range(8371):\n",
+    "            answer +=  ( ((self.y)[i])*log(sigs[i]) + (1 - ((self.y)[i]) )*log(1-sigs[i]) )\n",
+    "            \n",
+    "        return answer\n"
    ]
   },
   {
@@ -707,25 +680,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
-    "v = LogVerosimilitud(X_cython, y_cython)"
+    "v = LogVerosimilitud(X_cython,y_cython)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-35155.018885964615"
+       "-3270.759266887374"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -743,10 +716,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 121,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "597 µs ± 41.5 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit v.get(w_inicial)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.04 ms ± 98.1 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit RegresionLogisticaMixin()._log_verosimilitud(w_inicial, X_cython, y_cython)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "309 µs ± 11.6 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit RegresionLogisticaMixin()._log_verosimilitud(w_inicial, X_mcmc, y_mcmc)"
+   ]
   },
   {
    "cell_type": "markdown",
