--- a/e2 eficiencia MCMC.ipynb
+++ b/e2 eficiencia MCMC.ipynb
@@ -273,10 +273,7 @@
     "    # metodo protegido (por compatibilidad de version posterior)\n",
     "    def _log_verosimilitud(self, w, X, y):\n",
     "        var = X@w\n",
-    "        sigs = []\n",
-    "        for i in range(len(var)):\n",
-    "            sigs.append(self.sigmoide(var[i]))\n",
-    "        sigs = np.array(sigs)\n",
+    "        sigs = self.sigmoide(var)\n",
     "        return np.sum( y@np.log(sigs) + (1-y)@np.log(1-sigs) )\n",
     "\n",
     "w_inicial = np.load('modelos/w_inicial.npy')\n",
@@ -979,7 +976,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   },
   "nbTranslate": {
    "displayLangs": [
