--- a/e2 eficiencia MCMC.ipynb
+++ b/e2 eficiencia MCMC.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,16 +259,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-3270.7592662676516"
+       "-3270.759266267652"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +302,7 @@
        "numpy.ndarray"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -653,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -684,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -714,12 +714,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "# construya ProcesoRegresionLogisticaBayesianaMHV1 aqui\n",
-    "class ProcesoRegresionLogisticaBayesianaMHV1()"
+    "class ProcesoRegresionLogisticaBayesianaMHV1(Process,RegresionLogisticaBayesianaMHV1):\n",
+    "    \n",
+    "    def __init__(self,w_inicial,media_prior,std_inicial,std_proposal,n_samples,X,y,seed=6202):\n",
+    "        super().__init__()\n",
+    "        super(Process,self).__init__()\n",
+    "        # parametros metropolis hastings\n",
+    "        self.w_inicial = w_inicial\n",
+    "        self.media_priori = media_prior\n",
+    "        self.std_priori = std_inicial\n",
+    "        self.std_proposal = std_proposal\n",
+    "        self.n_muestras = n_samples\n",
+    "        # atributos inferidos\n",
+    "        self.dim_parametros = self.w_inicial.shape[0]\n",
+    "        self.traza = np.zeros((self.n_muestras + 1, self.dim_parametros, ))\n",
+    "        self.traza[0] = self.w_inicial\n",
+    "        # atributos para el fitting\n",
+    "        self.X = X\n",
+    "        self.y = y\n",
+    "        self.seed = seed\n",
+    "        \n",
+    "    def run(self):\n",
+    "        self.fit(self.X, self.y, self.seed)\n",
+    "        #super(Process,self).fit(self.X, self.y)\n",
+    "        print(self.seed)\n",
+    "        print(self.traza[-1])\n",
+    "        #np.save('trazas/s_{}.npy'.format(str(seed).zfill(4)),self.traza[-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Prueba\n",
+    "p=ProcesoRegresionLogisticaBayesianaMHV1(w_inicial,media_prior,std_inicial,std_proposal,\n",
+    "                                         n_samples,X_mcmc,y_mcmc,6202)\n",
+    "p.start()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Se obtiene la cantidad de nucleos:\n",
+    "n_ker = cpu_count() #8\n",
+    "# Se generan las semillas\n",
+    "seeds = np.array([500*(i+1) for i in range(n_ker)])\n",
+    "# Se definen los procesos\n",
+    "processes = (ProcesoRegresionLogisticaBayesianaMHV1(w_inicial,media_prior,std_inicial,std_proposal,n_samples,X_mcmc,y_mcmc,seed) for seed in seeds)\n",
+    "\n",
+    "# Se ejecutan en paralelo\n",
+    "[*map(lambda p: p.start(), processes)]\n",
+    "[p.join() for p in processes]"
    ]
   },
   {
@@ -1974,6 +2029,35 @@
    "toc_position": {},
    "toc_section_display": true,
    "toc_window_display": false
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
